plugins {
    id 'java'
}

description = 'Apache Ignite 3 Reference Applications'

allprojects {
    group = 'com.apache.ignite.examples'
    version = '1.0.0'
}

subprojects {
    apply plugin: 'java'
    
    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }
    
    repositories {
        mavenCentral()
    }
    
    dependencies {
        implementation libs.bundles.ignite.core
        implementation libs.bundles.logging
        
        testImplementation libs.bundles.testing
        testImplementation libs.testcontainers.junit
    }
    
    tasks.withType(JavaCompile) {
        options.compilerArgs += [
            '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
            '--add-opens=java.base/java.nio=ALL-UNNAMED',
            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
        ]
    }
    
    test {
        useJUnitPlatform()
        jvmArgs = [
            '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
            '--add-opens=java.base/java.nio=ALL-UNNAMED',
            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
            '-Dio.netty.tryReflectionSetAccessible=true'
        ]
    }
}